Form works as well

--- a/inputdatadialog.ui
+++ b/inputdatadialog.ui
@@ -59,6 +59,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="okButton">
+       <property name="text">
+        <string>ОК</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="cancelButton">
        <property name="text">
         <string>Отмена</string>
